# CrosswordCreator

./: .gitignore  CrosswordCreator.html  Dockerfile  README.md  app.js  build.sh  dict.json  fly.toml  globals.py  grid.json  helper.py  helpers.py  index.html  logger.py  package-lock.json  package.json  pyproject.toml  readme.md  requirements.txt  serve.py  serve_with_gui.py  server.py  webpack.config.js  words.txt
.devcontainer/: devcontainer.json  dockerfile
.github/workflows/: build.yml
app/: globals.py  helpers.py  index.html  main.js  serve.py  serve_with_gui.py
app/scripts/: grid.js  helper.js
app/static/: index.html  main.css  main.js
app/static/scripts/: cell.js  dictionary.js  grid.js  helper.js  search.js  secret.js
docs/: index.html
examples/: basic.json  software.json
public/: index.html
public/scripts/: dictionary.js  grid.js  helper.js  highlight.js  main.js  search.js
public/styles/: styles.css
puzzles/: grid.json
scripts/: app.js
server/: globals.py  helpers.py  serve.py  serve_with_gui.py
server/static/: index.html  main.css
server/static/assets/: favicon.icns
server/static/scripts/: cell.js  dictionary.js  helper.js  main.js  search.js
server/static/styles/: styles.css
static/: index.html
static/scripts/: cell.js  dictionary.js  grid.js  helper.js  main.js  search.js  secret.js
static/styles/: styles.css
styles/: styles.css
