[tool.poetry]
name = "crosswordcreator"
version = "0.1.0"
description = "An Flask server for an app that allows you to create a crossword puzzle within inline hints."
authors = ["Morten Veng <xmortenvengx@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.1.0"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
gunicorn = "^23.0.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"